--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
         <img src="../../../assets/images-removebg-preview 1.svg" alt="">
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#product">Product</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#footer">Contact Us</a></li>
           </ul>
         </nav>
         <button class="btn"><a href="">Buy Now</a></button>
