--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,6 +14,12 @@
   text-align: center;
   justify-content: space-between;
   align-items: center;
+
+  .active{
+    font-weight: 700;
+    font-size: 15px;
+    color: #D23166;
+  }
 }
 
 .header_inner ul {
@@ -50,6 +56,11 @@
   border: 0;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.header_inner .btn:hover {
+  background-color: #c53667;
+  transform: scale(1.1);
 }
 
 .header_inner .btn a {
@@ -110,6 +121,11 @@
   border: 0;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.header_text .btn:hover {
+  background-color: #c53667;
+  transform: scale(1.1);
 }
 
 .header_text .btn a {
