--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -5,7 +5,7 @@
         <br>Let us help you
       </h3>
       <div class="question_btn">
-        <input type="text" placeholder="Enter your question" name="" id=""><button><a href="#">Send</a></button>
+        <input type="text" placeholder="Enter your question" name="" id=""><button (click)="openDialog()"><a href="#">Send</a></button>
       </div>
     </div>
   </div>
